--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../default.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
-        <h1>alsdjflasd</h1>
+    <div class="root-div">
+        <div class="side-bar"></div>
+        <div class="main-view"></div>
     </div>
 </body>
 </html>
