--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <div class="root-div">
-        <div class="side-bar"></div>
+        <div class="side-bar">
+            <div id="side-bar-icon">
+                <img src="../../assests/icon/app_icon.png">
+            </div>
+            <div id="side-bar-buttons">
+                <button id="general_button">General</button>
+                <button id="network-button">Network</button>
+                <button id="rule-button">Rules</button>
+                <button id="about-button">About</button>
+                <button id="debug-button">Debug</button>
+            </div>
+        </div>
         <div class="main-view"></div>
     </div>
 </body>
