--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -13,11 +13,11 @@
                 <img src="../../assests/icon/app_icon.png">
             </div>
             <div id="side-bar-buttons">
-                <button id="general_button">General</button>
-                <button id="network-button">Network</button>
-                <button id="rule-button">Rules</button>
-                <button id="about-button">About</button>
-                <button id="debug-button">Debug</button>
+                <button id="general_button"><span id="general_button_span">General</span></button>
+                <button id="network-button"><span id="network_button_span">Network</span></button>
+                <button id="rule-button"><span id="rule_button_span">Rules</span></button>
+                <button id="about-button"><span id="about_button_span">About</span></button>
+                <button id="debug-button"><span id="debug_button_span">Debug</span></button>
             </div>
         </div>
         <div class="main-view"></div>
