--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -5,43 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut</title>
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="../default.css">
 </head>
 <body>
-    
-        <img src="../../assests/icon/app_icon.png" class ="rotate_image" alt="donut icon" >
-        <br><br><br><br><br>
-        <div class="heading_title">
-            <h2>BY TEAM DON </h2>
-        </div>
-        <br>
-        <br>
-        <br>
-        <div class="paragraph">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia aperiam, dolorum consequuntur, numquam quod exercitationem nobis voluptates quasi odit dicta eum architecto pariatur fuga sunt eveniet asperiores magni corporis. Omnis?</p>
-        </div>
-        <br><br><br><br><br><br><br><br><br><br>
-        <div class ="source Code">
-            <a href="https://github.com/DevyDhanish/donut.git" ><img src="../../assests/icon/github_icon.png" height=" 50" width="50"></a>
-        </div>
-        <div class="creators">
-            <h2>Creators-</h2>
-            <div>
-                <h3>K.M Dhanish</h3>
-                <a href="https://www.instagram.com/dhanishhh.fr/" >
-                    <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                </a>
+        <div class="side-bar">
+            <div id="side-bar-icon">
+                <div id="side-bar-icon-border">
+                    <img src="../../assests/icon/app_icon.png">
+                </div>
             </div>
-            <div>
-                <h3>OM Dewangan</h3>
-                <a href="https://www.instagram.com/0mdewang/">
-                    <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                </a>
+            <div id="side-bar-buttons">
+                <button id="general_button"><span id="general_button_span">General</span></button>
+                <button id="network-button"><span id="network_button_span">Network</span></button>
+                <button id="rule-button"><span id="rule_button_span">Rules</span></button>
+                <button id="about-button"><span id="about_button_span">About</span></button>
+                <button id="debug-button"><span id="debug_button_span">Debug</span></button>
             </div>
-            <div>
-                <h3>Naveen Chandrakar</h3>
-                <a href="https://www.instagram.com/naveeeeen._/">
-                    <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                </a>
+        </div>
+        <div class="main-view">
+            <div class="main-view-heading">
+                <h1>General</h1>
+            </div>
+            <div class="main-view-info">
+                <img src="../../assests/icon/app_icon.png" class ="rotate_image" alt="donut icon" >
+                <div class="heading_title">
+                    <h2>BY TEAM DON </h2>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="paragraph">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia aperiam, dolorum consequuntur, numquam quod exercitationem nobis voluptates quasi odit dicta eum architecto pariatur fuga sunt eveniet asperiores magni corporis. Omnis?</p>
+                </div>
+                <div class ="source Code">
+                    <a href="https://github.com/DevyDhanish/donut.git" ><img src="../../assests/icon/github_icon.png" height=" 50" width="50"></a>
+                </div>
+                <div class="creators">
+                    <h2>Creators-</h2>
+                    <div>
+                        <h3>K.M Dhanish</h3>
+                        <a href="https://www.instagram.com/dhanishhh.fr/" >
+                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
+                        </a>
+                    </div>
+                    <div>
+                        <h3>OM Dewangan</h3>
+                        <a href="https://www.instagram.com/0mdewang/">
+                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
+                        </a>
+                    </div>
+                    <div>
+                        <h3>Naveen Chandrakar</h3>
+                        <a href="https://www.instagram.com/naveeeeen._/">
+                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 </body>
