--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../default.css">
 </head>
 <body>
+    <div class="root-div">
         <div class="side-bar">
             <div id="side-bar-icon">
                 <div id="side-bar-icon-border">
@@ -24,45 +25,11 @@
         </div>
         <div class="main-view">
             <div class="main-view-heading">
-                <h1>General</h1>
+                <h1>about</h1>
             </div>
-            <div class="main-view-info">
-                <img src="../../assests/icon/app_icon.png" class ="rotate_image" alt="donut icon" >
-                <div class="heading_title">
-                    <h2>BY TEAM DON </h2>
-                </div>
-                <br>
-                <br>
-                <br>
-                <div class="paragraph">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia aperiam, dolorum consequuntur, numquam quod exercitationem nobis voluptates quasi odit dicta eum architecto pariatur fuga sunt eveniet asperiores magni corporis. Omnis?</p>
-                </div>
-                <div class ="source Code">
-                    <a href="https://github.com/DevyDhanish/donut.git" ><img src="../../assests/icon/github_icon.png" height=" 50" width="50"></a>
-                </div>
-                <div class="creators">
-                    <h2>Creators-</h2>
-                    <div>
-                        <h3>K.M Dhanish</h3>
-                        <a href="https://www.instagram.com/dhanishhh.fr/" >
-                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                        </a>
-                    </div>
-                    <div>
-                        <h3>OM Dewangan</h3>
-                        <a href="https://www.instagram.com/0mdewang/">
-                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                        </a>
-                    </div>
-                    <div>
-                        <h3>Naveen Chandrakar</h3>
-                        <a href="https://www.instagram.com/naveeeeen._/">
-                            <img src="../../assests/icon/insta.png" width="30px" alt="instagram">
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <div class="main-view-info"></div>
         </div>
+    </div>
 </body>
 <script type="module" src="../render.js"></script>
 </html>
