--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div id="side-bar-buttons">
-                <button id="general_button"><span id="general_button_span">General</span></button>
+                <button id="general-button"><span id="general_button_span">General</span></button>
                 <button id="network-button"><span id="network_button_span">Network</span></button>
                 <button id="rule-button"><span id="rule_button_span">Rules</span></button>
                 <button id="about-button"><span id="about_button_span">About</span></button>
@@ -24,10 +24,13 @@
             </div>
         </div>
         <div class="main-view">
-            <div class="main-view-heading">
+            <div class="about-view-heading">
                 <h1>about</h1>
             </div>
-            <div class="main-view-info"></div>
+            <div class="about-view-info">
+                <img id="about-view-info-icon" src="../../assests/icon/app_icon.png">
+                <h4>Donut v1.0.0 by team D-O-N</h4>
+            </div>
         </div>
     </div>
 </body>
