--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -26,9 +26,7 @@
             </div>
         </div>
         <div class="main-view">
-            <div class="main-view-heading">
-                <h1>General</h1>
-            </div>
+            <div class="main-view-heading"></div>
             <div class="main-view-info"></div>
         </div>
     </div>
