--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut</title>
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="Network.css">
     <link rel="stylesheet" href="../default.css">
 </head>
 <body>
@@ -24,10 +24,10 @@
             </div>
         </div>
         <div class="main-view">
-            <div class="general-view-heading">
-                <h1>General</h1>
+            <div class="network-view-heading">
+                <h1>Network</h1>
             </div>
-            <div class="general-view-info">
+            <div class="network-view-info">
             </div>
         </div>
     </div>
