--- a/pages/rules/rule.html
+++ b/pages/rules/rule.html
@@ -24,10 +24,10 @@
             </div>
         </div>
         <div class="main-view">
-            <div class="general-view-heading">
-                <h1>General</h1>
+            <div class="rules-view-heading">
+                <h1>Rules</h1>
             </div>
-            <div class="general-view-info">
+            <div class="rules-view-info">
             </div>
         </div>
     </div>
