--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -21,8 +21,7 @@
                 <button id="rule-button"><span id="rule_button_span">Rules</span></button>
                 <button id="about-button"><span id="about_button_span">About</span></button>
                 <button id="debug-button"><span id="debug_button_span">Debug</span></button>
-            </div>
-        </div>
+            </div>    </div>
         <div class="main-view">
             <div class="about-view-heading">
                 <h1>about</h1>
