--- a/pages/rules/rule.html
+++ b/pages/rules/rule.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut</title>
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="rule.css">
     <link rel="stylesheet" href="../default.css">
 </head>
 <body>
@@ -28,9 +28,14 @@
                 <h1>Rules</h1>
             </div>
             <div class="rules-view-info">
+                <h1 id="rule_string"></h1>
+                <div id="rule-view-block">
+                    <button id="rule-add-button"><span id="rule_add_button_span">Add rule</span></button>
+                </div>
             </div>
         </div>
     </div>
 </body>
+<script type="module" src="rule.js"></script>
 <script type="module" src="../render.js"></script>
 </html>
