--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -28,9 +28,14 @@
                 <h1>Network</h1>
             </div>
             <div class="network-view-info">
+                <div id="networkscan-view-info"></div>
+            </div>
+            <div class="network-view-connect">
+                <button id="debug-button"><span id="debug_button_span">Connect</span></button>
             </div>
         </div>
     </div>
 </body>
 <script type="module" src="../render.js"></script>
+<script type="module" src="network.js"></script>
 </html>
