--- a/pages/general/general.html
+++ b/pages/general/general.html
@@ -28,9 +28,11 @@
                 <h1>General</h1>
             </div>
             <div class="general-view-info">
+                <div id="general-block-add-data"></div>
             </div>
         </div>
     </div>
 </body>
 <script type="module" src="../render.js"></script>
+<script type="module" src="general.js"></script>
 </html>
