--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -31,7 +31,9 @@
                 <div id="networkscan-view-info"></div>
             </div>
             <div class="network-view-connect">
-                <button id="debug-button"><span id="debug_button_span">Connect</span></button>
+                <select id="networks-select"></select>
+                <input type="password" id="password" name="password" placeholder="Enter your password">
+                <button id="connect-button"><span id="debug_button_span">Connect</span></button>
             </div>
         </div>
     </div>
