--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -24,12 +24,31 @@
             </div>    </div>
         <div class="main-view">
             <div class="about-view-heading">
-                <h1>about</h1>
+                <h1>About</h1>
             </div>
             <div class="about-view-info">
                 <img id="about-view-info-icon" src="../../assests/icon/app_icon.png">
                 <h4>Donut v1.0.0 by team D-O-N</h4>
             </div>
+            <br><br>
+            <div class="paragraph">
+                <p>A rule-based network management app that is a software application designed to facilitate the monitoring, and managment of computer networks through userdefined rules.</p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="creators">
+                <h3> Creators- </h3>
+                
+                    <p>Dhanish<a href="https://www.instagram.com/dhanishhh.fr/" target="_main"><img src="c:\Users\ASUS\Desktop\instagram-Photoroom.png-Photoroom.png" width="50px" </p></a>
+                    <br>
+                    <p>Om Dewangan<a href="https://www.instagram.com/0mdewang/" target="_main"><img src="c:\Users\ASUS\Desktop\instagram-Photoroom.png-Photoroom.png" width="50px"</p></a>
+                    <br>
+                    <p>Naveen Chandrakar<a href="https://www.instagram.com/naveeeeen._/" target="_main"><img src="c:\Users\ASUS\Desktop\instagram-Photoroom.png-Photoroom.png" width="50px"</p></a>
+                    <br>
+            </div>
+            <br>
+            <a href="https://github.com/DevyDhanish/donut.git">Source Code</a>
         </div>
     </div>
 </body>
