--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -48,7 +48,7 @@
                     <br>
             </div>
             <br>
-            <a href="https://github.com/DevyDhanish/donut.git">Source Code</a>
+            <a href="https://github.com/DevyDhanish/donut.git" target="_main">Source Code</a>
         </div>
     </div>
 </body>
